--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-# Created by .ignore support plugin (hsz.mobi)
+.idea/
+.idea_modules/
+.gradle/
+.vscode/
+.vs/
+
+bin/
+build/
+gen/
+out/
+node_modules/
